# synthesizer

./: .gitignore  Cargo.toml  build.rs  tables.rs
generate_intervals/: 31edo.py  alt.py  interval_list  intervals  intervals2  main.py  prepare  scales  table  tables
madonna/: just.scl  manifest
quietness/: ace2.scl  b13.scl  b2.scl  d.scl  e1.scl  manifest
src/: envelope.rs  file.rs  hw.rs  lfo.rs  lib.rs  main.rs  midi.rs  oscillator.rs  pcm.rs  scala.rs  synth.rs  tables.rs  tests.rs  voice.rs
synth/: Cargo.toml
synth/src/: build.rs  envelope.rs  lib.rs  modulator.rs  oscillator.rs  tables.rs  voice.rs
tables/: Cargo.toml
tables/src/: lib.rs
