[package]
name = "instr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa = "0.7.0"
anyhow = "1.0.69"
bpaf = { version = "0.7.8", features = ["derive"] }
tables = { path = "tables" }

[dev-dependencies]
rustfft = "6.1.0"
#wav = "0.6.0"

[build-dependencies]
anyhow = "1.0.69"
tables = { path = "tables" }
