[package]
name = "instr"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa = "0.7.1"
anyhow = "1.0.100"
bpaf = { version = "0.7.10", features = ["derive"] }
synth = { path = "synth" }
#wav = "1.0.0"

#[dev-dependencies]
#rustfft = "6.1.0"

[build-dependencies]
anyhow = "1.0.100"
