[package]
name = "instr"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa = "0.11.0"
anyhow = "1.0.100"
bpaf = { version = "0.9.20", features = ["derive"] }
synth = { path = "synth" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
#wav = "1.0.0"

#[dev-dependencies]
#rustfft = "6.1.0"

[build-dependencies]
anyhow = "1.0.100"
